add calendar and map's page log out button goes to home page

--- a/EMD_Website/css/style.css
+++ b/EMD_Website/css/style.css
@@ -123,6 +123,22 @@ h1, h2, h3{
 
 /*  service End  ============================*/
 
+/* section-title CSS */
+
+.section-title{
+    margin-top: 20px;
+    padding: 10px;
+    background: #0383c0;
+    color: #fff;
+}
+
+.section-title small{
+    color: #ccc !important;
+}
+
+/* section-title CSS =============================== Ends */
+
+
 /* Media Queries */
 
 @media(max-width:990px){
